Material UI Applied + minor layout issue fixed

--- a/Hotel1114_Front-end/daterangepicker/daterangepicker.css
+++ b/Hotel1114_Front-end/daterangepicker/daterangepicker.css
@@ -101,9 +101,9 @@
     border-color: transparent;
     color: #999; }
   .daterangepicker td.in-range {
-    background-color: #ebf4f8; /* #ebf4f8 */
+    background-color: #2196F3; /* #ebf4f8 */
     border-color: transparent;
-    color: #000;
+    color: #fff;
     border-radius: 0; }
   .daterangepicker td.start-date {
     border-radius: 4px 0 0 4px; }
@@ -112,7 +112,7 @@
   .daterangepicker td.start-date.end-date {
     border-radius: 4px; }
   .daterangepicker td.active, .daterangepicker td.active:hover {
-    background-color: #357ebd;
+    background-color: #2196F3;
     border-color: transparent;
     color: #fff; }
   .daterangepicker th.month {
@@ -128,15 +128,9 @@
     box-shadow: 0 0 black;
     width: 100%;
     min-width: 250px;
-    max-width: 400px;
+    max-width: 600px;
     height: 350px;
   }
-  /*.daterangepicker.opensembed > .calendar,
-  .daterangepicker.opensembed > .ranges {
-    display: inline-block;
-    vertical-align: top;
-    margin: 5px;
-  }*/
   .daterangepicker td.disabled, .daterangepicker option.disabled {
     color: #999;
     cursor: not-allowed;
